# CILISP

./: .gitignore  CMakeLists.txt  DOCUMENTATION.txt  README.md
inputs/: DOCUMENTATION.txt  check5.cilisp  task_4_read_target.txt
inputs/task_1/: abs.cilisp  add.cilisp  cbrt.cilisp
instructions/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md
src/: cilisp.c  cilisp.h  cilisp.l  cilisp.y  yyreadprint.c
